--- a/Strona filmu/movies.html/BOND.html
+++ b/Strona filmu/movies.html/BOND.html
@@ -19,28 +19,25 @@
             text-align:center;
         }
     </style> -->
-    <link href="CSS/style.css" type="text/css" rel="stylesheet" />
+    <link href="../CSS/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1><a href="www.fileeb.pl">Film Teb</a></h1>
-    <!--Tabela 1-->
+    <h1 id="Film"><a href="www.fileeb.pl">Film Teb</a></h1>
     <table>
-        <tr class="tabelaA">
-        <th colspan="2">Nazwisko i Imię</th>
-        <th>Klasa</th>
-        <th>Nr w dzienniku</th>
-        </tr>
-        <tr class="tabelaA">
-            <td colspan="2">Rutkowski Michał</td>
-            <td>3AG</td>
-            <td class="center">8</td>
-        </tr>
+        <ul>
+            <li><a href="../index.html">STRONA GŁÓWNA</a></li>
+            <li><a href="movies.html">LISTA FILMÓW</a></li>
+            <li><a href="../Scenarzyści/Scenarzyści.html">LISTA REŻYSERÓW</a></li>
+            <li><a href="../about.html">INFORMACJE</a></li>
+        </ul>
     </table>
+    <!--Tabela 1-->
     <h2 class="ty">Nie czas umierać</h2>
     <p class="skrót">Na prośbę swojego starego przyjaciela, Felixa Leitera z CIA, 
     <br>James Bond bierze udział w misji odbicia porwanego naukowca. 
     <br>Trop prowadzi do niebezpiecznego złoczyńcy.</p>
+    <img src="../png/9.jpg" class="baneer">
     <h3>Podstawowe informacje</h3>
     <!--Tabela 2-->
     <table class="T">
@@ -99,9 +96,9 @@
 
     <h4>Opis fabuły</h4>
     <p class="fabula">James Bond opuszcza czynną służbę i cieszy się spokojnym życiem na Jamajce. Tymczasem jednak 
-    <br>jego stary przyjaciel Felix Leiter z CIA zwraca się do niego o pomoc. Misja uratowania 
-    <br>porwanego naukowca okazuje się o wiele bardziej zdradliwa, niż mogłoby się wydawać i naprowadza agenta 007 
-    <br>na ślad tajemniczego złoczyńcy, dysponującego nową, niezwykle niebezpieczną technologią.</p>
+ jego stary przyjaciel Felix Leiter z CIA zwraca się do niego o pomoc. Misja uratowania 
+porwanego naukowca okazuje się o wiele bardziej zdradliwa, niż mogłoby się wydawać i naprowadza agenta 007 
+na ślad tajemniczego złoczyńcy, dysponującego nową, niezwykle niebezpieczną technologią.</p>
     
     <h4>Role w filmie</h4>
     <!--Tabela 4-->
@@ -112,7 +109,7 @@
         <tr>
             <td>
                 <dl>
-                    <dt>Jeams Bond</dt>
+                    <dt>James Bond</dt>
                     <dd>Daniel Craig</dd>
                     <dt>Madeleine Swann</dt>
                     <dd>Lea Seydoux</dd>
@@ -129,9 +126,9 @@
             <th colspan="3">Fotosy z filmu</th>
         </tr>
         <tr>
-            <td><img src="zdj/1.jpg" class="zdj"></td> <!--img src i podaje link do zdjęcia-->
-            <td><img src="zdj/2.jpg" class="zdj"></td>
-            <td><img src="zdj/3.jpg" class="zdj"></td>
+            <td><img src="../png/11.jpg" class="zdj"></td> <!--img src i podaje link do zdjęcia-->
+            <td><img src="../png/12.jpg" class="zdj"></td>
+            <td><img src="../png/13.jpg" class="zdj"></td>
         </tr>
     </table>
 
