--- a/Strona filmu/Scenarzyści/Scenarzyści.html
+++ b/Strona filmu/Scenarzyści/Scenarzyści.html
@@ -8,14 +8,14 @@
     <link href="../CSS/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <h1><a href="https://www.filmweb.pl/">Film Teb</a></h1>
+    <h1 id="Film"><a href="https://www.filmweb.pl/">Film Teb</a></h1>
 
     <table>
         <ul>
-            <li>STRONA GŁÓWNA</li>
-            <li>LISTA FILMÓW</li>
-            <li>LISTA REŻYSERÓW</li>
-            <li>INFORMACJE</li>
+            <li><a href="../index.html">STRONA GŁÓWNA</a></li>
+            <li><a href="../movies.html/movies.html">LISTA FILMÓW</a></li>
+            <li><a href="Scenarzyści.html">LISTA REŻYSERÓW</a></li>
+            <li><a href="../about.html">INFORMACJE</a></li>
         </ul>
     </table>
 
@@ -23,8 +23,8 @@
 
     <table>
         <ul>
-            <li>Neal Purvis</a></li>
-            <li>Robert Wade</li>
+            <li><a href="Neal Purvis.html">Neal Purvis</a></li>
+            <li><a href="Robert Wade.html">Robert Wade</a></li>
         </ul>
     </table>
 </body>
