--- a/Strona filmu/about.html
+++ b/Strona filmu/about.html
@@ -13,14 +13,14 @@
     </style>
 </head>
 <body>
-    <h1><a href="https://www.filmweb.pl/">Film Teb</a></h1>
+    <h1 id="Film"><a href="https://www.filmweb.pl/">Film Teb</a></h1>
 
     <table>
         <ul>
-            <li>STRONA GŁÓWNA</li>
-            <li>LISTA FILMÓW</li>
-            <li>LISTA REŻYSERÓW</li>
-            <li>INFORMACJE</li>
+            <li><a href="index.html">STRONA GŁÓWNA</a></li>
+            <li><a href="movies.html/movies.html">LISTA FILMÓW</a></li>
+            <li><a href="Scenarzyści/Scenarzyści.html">LISTA SCENOGRAFÓW</a></li>
+            <li><a href="about.html">INFORMACJE</a></li>
         </ul>
     </table>
 
