--- a/Strona filmu/movies.html/movies.html
+++ b/Strona filmu/movies.html/movies.html
@@ -8,14 +8,14 @@
     <link href="../CSS/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <h1><a href="https://www.filmweb.pl/">Film Teb</a></h1>
+    <h1 id="Film"><a href="https://www.filmweb.pl/">Film Teb</a></h1>
 
     <table>
         <ul>
-            <li>STRONA GŁÓWNA</li>
-            <li>LISTA FILMÓW</li>
-            <li>LISTA REŻYSERÓW</li>
-            <li>INFORMACJE</li>
+            <li><a href="../index.html">STRONA GŁÓWNA</a></li>
+            <li><a href="movies.html">LISTA FILMÓW</a></li>
+            <li><a href="../Scenarzyści/Scenarzyści.html">LISTA REŻYSERÓW</a></li>
+            <li><a href="../about.html">INFORMACJE</a></li>
         </ul>
     </table>
     
@@ -23,6 +23,6 @@
 
     <table>
         <ul>
-            <li>BOND</li>
+            <li><a href="BOND.html">BOND</a></li>
         </ul>
     </table>
